corrected internal links

--- a/SSfMT/Handbook.html
+++ b/SSfMT/Handbook.html
@@ -19,7 +19,7 @@
 <div id='summary'>Software Systems for Music Technology</div>
 </div>
 <div class='subheader'>
-<div id='related'>See also: <a href="./../SSfMT.html">Software Systems for Music Technology</a>, <a href="./../Handbook.html#Course%20Materials">Course Materials</a>, <a href="./../Handbook.html#Assessment">Assessment</a></div>
+<div id='related'>See also: <a href="./../SSfMT.html">Software Systems for Music Technology</a>, <a href="./../SSfMT/Handbook.html#Course%20Materials">Course Materials</a>, <a href="./../SSfMT/Handbook.html#Assessment">Assessment</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#Module%20Outline'>Module Outline</a></li>
