--- a/SSfMT/Lectures/Electronic Music.html
+++ b/SSfMT/Lectures/Electronic Music.html
@@ -19,7 +19,7 @@
 <div id='summary'>Software Systems for Music Technology</div>
 </div>
 <div class='subheader'>
-<div id='related'>See also: <a href="./../../SSfMT.html">Software Systems for Music Technology</a>, <a href="./../../Practicals/Modular Synthesis 1">Modular Synthesis 1</a>, <a href="./../../Lectures/Introduction to Module">Introduction to Module</a>, <a href="./../../Practicals/Modular Synthesis 2">Modular Synthesis 2</a></div>
+<div id='related'>See also: <a href="./../../SSfMT.html">Software Systems for Music Technology</a>, <a href="./../../SSfMT/Lectures/Introduction to Module.html">Introduction to Module</a>, <a href="./../../SSfMT/Practicals/Modular Synthesis 2.html">Modular Synthesis 2</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'></ul></div><div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture2/Lecture2.001.png'/><br><b>Musical Telegraph, Elisha Gray, 1874</b></div>
