--- a/SSfMT/Lectures/Introduction to Module.html
+++ b/SSfMT/Lectures/Introduction to Module.html
@@ -19,7 +19,7 @@
 <div id='summary'>Software Systems for Music Technology</div>
 </div>
 <div class='subheader'>
-<div id='related'>See also: <a href="./../../SSfMT.html">Software Systems for Music Technology</a>, <a href="./../../Practicals/Modular Synthesis 1">Modular Synthesis 1</a>, <a href="./../../Lectures/Electronic Music">Electronic Music</a></div>
+<div id='related'>See also: <a href="./../../SSfMT.html">Software Systems for Music Technology</a>, <a href="./../../SSfMT/Practicals/Modular Synthesis 1.html">Modular Synthesis 1</a>, <a href="./../../SSfMT/Lectures/Electronic Music.html">Electronic Music</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'></ul></div><div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture1/Lecture1.002.png'/><br><b>SuperCollider code</b></div>
