--- a/SSfMT/Practicals/Modular Synthesis 1.html
+++ b/SSfMT/Practicals/Modular Synthesis 1.html
@@ -19,7 +19,7 @@
 <div id='summary'>Software Systems for Music Technology</div>
 </div>
 <div class='subheader'>
-<div id='related'>See also: <a href="./../../SSfMT.html">Software Systems for Music Technology</a>, <a href="./../../Lecture/Introduction to Module">Introduction to Module</a>, <a href="./../../Lectures/Electronic Music">Electronic Music</a></div>
+<div id='related'>See also: <a href="./../../SSfMT.html">Software Systems for Music Technology</a>, <a href="./../../SSfMT/Lectures/Introduction to Module.html">Introduction to Module</a>, <a href="./../../SSfMT/Practicals/Modular Synthesis 2.html">Modular Synthesis 2</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#Download'>Download</a></li>
@@ -30,8 +30,8 @@
 <p><a href="http://www.federicoreuben.com/SSfMT/Practicals/Modular Synthesis 1.pdf">Download Slides</a><h3><a class='anchor' name='SuperCollider%20IDE'>SuperCollider IDE</a></h3>
 
 <p>If from SuperCollider IDE, then you will have to follow the instructions below.
-<p>If you are on a Mac or Linux, evaluate the following line of code. This will open your browser. Then click on <em>Modular Synthesis 1.pdf</em> to download slides:<pre class='code prettyprint lang-sc'>"open http://www.federicoreuben.com/SSfMT/Practicals/".unixCmd;</pre>
+<p>If you are on a Mac or Linux, evaluate the following line of code. This will open your browser. Then click on <em>Modular Synthesis 1.pdf</em> to download slides:<pre class='code prettyprint lang-sc'>"open http://www.federicoreuben.com/SSfMT/Practicals/Modular Synthesis 1.pdf".unixCmd;</pre>
 
-<p>If you are on Windows, evaluate the following line of code. This will open your browser. Then click on <em>Modular Synthesis 1.pdf</em> to download slides:<pre class='code prettyprint lang-sc'>"start http://www.federicoreuben.com/SSfMT/Practicals/".unixCmd;</pre>
+<p>If you are on Windows, evaluate the following line of code. This will open your browser. Then click on <em>Modular Synthesis 1.pdf</em> to download slides:<pre class='code prettyprint lang-sc'>"start http://www.federicoreuben.com/SSfMT/Practicals/Modular Synthesis 1.pdf".unixCmd;</pre>
 
 <p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Practicals/Modular Synthesis 1.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Practicals/Modular Synthesis 1.schelp</a><br>link::SSfMT/Practicals/Modular Synthesis 1::<br>sc version: 3.8.0</div></div></body></html>
