practical mod synth 2

--- a/SSfMT/Practicals/Modular Synthesis 2.html
+++ b/SSfMT/Practicals/Modular Synthesis 2.html
@@ -26,11 +26,14 @@
 <ul class='toc'><li class='toc2'><a href='#SuperCollider%20IDE'>SuperCollider IDE</a></li>
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Download'>Download</a></h2>
 
-<p>Follow this link to download the slides:
-<p><a href="http://www.federicoreuben.com/SSfMT/Practicals/Modular Synthesis 2.pdf">Download Slides</a><h3><a class='anchor' name='SuperCollider%20IDE'>SuperCollider IDE</a></h3>
+<p>Follow these links to download the materials for this session:
+<p><a href="http://www.federicoreuben.com/SSfMT/Practicals/Modular Synthesis 2.pdf">Download Slides</a>
+<p><a href="http://www.federicoreuben.com/SSfMT/Practicals/vcv_rack_patches.zip">Download VCV Rack Patches</a><h3><a class='anchor' name='SuperCollider%20IDE'>SuperCollider IDE</a></h3>
 
 <p>If from SuperCollider IDE, then you will have to follow the instructions below.
-<p>If you are on a Mac or Linux, evaluate the following line of code. This will open your browser. Then click on <em>Modular Synthesis 2.pdf</em> to download slides:<pre class='code prettyprint lang-sc'>"open http://www.federicoreuben.com/SSfMT/Practicals/Modular Synthesis 2.pdf".unixCmd;</pre>
+<p>If you are on a Mac or Linux, evaluate the following line of code. This will open your browser. Then click on <em>Modular Synthesis 2.pdf</em> to download slides:<pre class='code prettyprint lang-sc'>"open http://www.federicoreuben.com/SSfMT/Practicals/Modular Synthesis 2.pdf".unixCmd;
+"open :http://www.federicoreuben.com/SSfMT/Practicals/vcv_rack_patches.zip".unixCmd;</pre>
 
-<p>If you are on Windows, evaluate the following line of code. This will open your browser. Then click on <em>Modular Synthesis 2.pdf</em> to download slides:<pre class='code prettyprint lang-sc'>"start http://www.federicoreuben.com/SSfMT/Practicals/Modular Synthesis 2.pdf".unixCmd;</pre>
+<p>If you are on Windows, evaluate the following line of code. This will open your browser. Then click on <em>Modular Synthesis 2.pdf</em> to download slides:<pre class='code prettyprint lang-sc'>"start http://www.federicoreuben.com/SSfMT/Practicals/Modular Synthesis 2.pdf".unixCmd;
+"start :http://www.federicoreuben.com/SSfMT/Practicals/vcv_rack_patches.zip".unixCmd;</pre>
 <div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Practicals/Modular Synthesis 2.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Practicals/Modular Synthesis 2.schelp</a><br>link::SSfMT/Practicals/Modular Synthesis 2::<br>sc version: 3.8.0</div></div></body></html>
