--- a/SSfMT/Lectures/Electronic Music.html
+++ b/SSfMT/Lectures/Electronic Music.html
@@ -105,7 +105,8 @@
 <p><a href="http://youtu.be/MTxeZ1HDg34">Moroder Promo</a><div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture2/Lecture2.036.png'/><br><b>Giorgio Moroder and Donna Summer</b></div>
 
 <p><a href="https://youtu.be/Nm-ISatLDG0">Donna Summer and Giorgio Moroder, “I feel love”, I Remember Yesterday, 1977</a>
-<p><a href="http://youtu.be/u0-XN5jQ0XI?t=8s">Moroder/Summer TV feature from 1990s</a><div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture2/Lecture2.037.png'/><br><b>Haruomi Hosono, Yukijiro Takahashi, Ryuichi Sakamoto - Yellow Magic Orchestra (YMO)</b></div>
+<p><a href="http://youtu.be/u0-XN5jQ0XI?t=8s">Moroder/Summer TV feature from 1990s</a>
+<p><a href="https://youtu.be/zhl-Cs1-sG4">Daft Punk, Giorgio by Moroder, 2014</a><div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture2/Lecture2.037.png'/><br><b>Haruomi Hosono, Yukijiro Takahashi, Ryuichi Sakamoto - Yellow Magic Orchestra (YMO)</b></div>
 
 <p><a href="https://youtu.be/LmtoiRyPS3o">YMO, Computer Games, 1978</a>
 <p><a href="https://www.youtube.com/watch?v=xB0cwq-C77g">YMO, “1000 Knifes”, BGM, 1981</a><div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture2/Lecture2.038.png'/><br><b>Afrika Bambaataa</b></div>
