--- a/SSfMT.html
+++ b/SSfMT.html
@@ -28,8 +28,7 @@
 <ul class='toc'></ul><li class='toc2'><a href='#Practicals'>Practicals</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Formative%20Tasks'>Formative Tasks</a></li>
 <ul class='toc'></ul></ul><li class='toc1'><a href='#News'>News</a></li>
-<ul class='toc'><li class='toc2'><a href='#Talks'>Talks</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Events'>Events</a></li>
+<ul class='toc'><li class='toc2'><a href='#Events'>Events</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Links'>Links</a></li>
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Latest'>Latest</a></h2>
 <div class='note'><span class='notelabel'>NOTE:</span> Please note that the <a href="./SSfMT/Assignments/Seminar Presentation.html">Seminar Presentation</a> will take place on <strong>Friday, 1 December from 9:30-13:15</strong></div><div class='note'><span class='notelabel'>NOTE:</span> I will be available from <strong>09:30 to 12:00 on Monday Nov 27 at my office (mrc/002)</strong> if you have any questions regarding the materials covered in class, VCV Rack, your track and/or your seminar presentation.</div><div class='note'><span class='notelabel'>NOTE:</span> Please bring your laptop and headphones to every session.</div><h2><a class='anchor' name='Module'>Module</a></h2>
@@ -50,13 +49,10 @@
 <li><a href="./SSfMT/Tasks/Task 1.html">Task 1</a> - Due 20/11<li><a href="./SSfMT/Tasks/Task 2.html">Task 2</a> - Due 1/12<li><a href="./SSfMT/Tasks/Task 3.html">Task 3</a> - Due 16/1</ul>
 <h2><a class='anchor' name='News'>News</a></h2>
 
-<p><em>Software Systems for Music Technology</em> related news, announcements, events, concerts, talks, links, etc:<h3><a class='anchor' name='Talks'>Talks</a></h3>
+<p><em>Software Systems for Music Technology</em> related news, announcements, events, concerts, talks, links, etc:<h3><a class='anchor' name='Events'>Events</a></h3>
 
-<p>22/11/2017 <a href="https://www.mstrcyork.org/events/event/research-seminar-tanaka/">Research Seminar: Atau Tanaka</a><h3><a class='anchor' name='Events'>Events</a></h3>
-
-<p>22/11/2017 - <a href="https://www.facebook.com/events/286408671866523/">EMOMYork: Electronic Music Open Mic and Forum</a>
-<p>25/11/2017 - <a href="https://www.facebook.com/tazinstallationUK/">Temporary Autonomous Zones</a>, 3Sixty, Ron Cooke Hub, Heslington East Campus, York
-<p>27/4/2018 - <a href="https://algorave.com/">CCCH</a>, Leeds<h3><a class='anchor' name='Links'>Links</a></h3>
+<p>27/4/2018 - <a href="https://algorave.com/">CCCH</a>, Leeds
+<p>29/11/2017 - <a href="https://www.facebook.com/events/1521059151311101/?notif_t=event_invite_reminder&notif_id=1511641998656861">Electronic Music by York students</a>, Rymer Auditorium, University of York<h3><a class='anchor' name='Links'>Links</a></h3>
 <ul>
 <li><a href="https://www.mstrcyork.org/">Music, Science and Technology Research Cluster (mstrc)</a><li><a href="https://www.mstrcyork.org/technologies-for-musical-creativity/">Technologies for Musical Creativity Group (TMCG)</a><li><a href="https://algorave.com/">Algoraves</a><li><a href="https://yorkshiresoundwomen.wordpress.com/">Yorkshire Sound Women Network (YSWN)</a></ul>
 
