--- a/SSfMT.html
+++ b/SSfMT.html
@@ -31,7 +31,7 @@
 <ul class='toc'><li class='toc2'><a href='#Events'>Events</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Links'>Links</a></li>
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Latest'>Latest</a></h2>
-<div class='note'><span class='notelabel'>NOTE:</span> Please note that the <a href="./SSfMT/Assignments/Seminar Presentation.html">Seminar Presentation</a> will take place on <strong>Friday, 1 December from 9:30-13:15</strong></div><div class='note'><span class='notelabel'>NOTE:</span> I will be available from <strong>09:30 to 12:00 on Monday Nov 27 at my office (mrc/002)</strong> if you have any questions regarding the materials covered in class, VCV Rack, your track and/or your seminar presentation.</div><div class='note'><span class='notelabel'>NOTE:</span> Please bring your laptop and headphones to every session.</div><h2><a class='anchor' name='Module'>Module</a></h2>
+<div class='note'><span class='notelabel'>NOTE:</span> Please bring your laptop and headphones to every session.</div><h2><a class='anchor' name='Module'>Module</a></h2>
 <h3><a class='anchor' name='Module%20Information'>Module Information</a></h3>
 <ul>
 <li><a href="./SSfMT/Handbook.html">Handbook</a><li><a href="./SSfMT/Handbook.html#Module%20Overview">Module Overview</a><li><a href="./SSfMT/Handbook.html#Assessment">Assessment</a><li><a href="./SSfMT/Handbook.html#Course%20Materials">Course Materials</a><li><a href="./SSfMT/Assignment Briefs.html">Assignment Briefs</a><li><a href="./SSfMT/moduleplan.htm">Module Plan</a></ul>
@@ -51,8 +51,7 @@
 
 <p><em>Software Systems for Music Technology</em> related news, announcements, events, concerts, talks, links, etc:<h3><a class='anchor' name='Events'>Events</a></h3>
 
-<p>27/4/2018 - <a href="https://algorave.com/">CCCH</a>, Leeds
-<p>29/11/2017 - <a href="https://www.facebook.com/events/1521059151311101/?notif_t=event_invite_reminder&notif_id=1511641998656861">Electronic Music by York students</a>, Rymer Auditorium, University of York<h3><a class='anchor' name='Links'>Links</a></h3>
+<p>27/4/2018 - <a href="https://algorave.com/">CCCH</a>, Leeds<h3><a class='anchor' name='Links'>Links</a></h3>
 <ul>
 <li><a href="https://www.mstrcyork.org/">Music, Science and Technology Research Cluster (mstrc)</a><li><a href="https://www.mstrcyork.org/technologies-for-musical-creativity/">Technologies for Musical Creativity Group (TMCG)</a><li><a href="https://algorave.com/">Algoraves</a><li><a href="https://yorkshiresoundwomen.wordpress.com/">Yorkshire Sound Women Network (YSWN)</a></ul>
 
