--- a/SSfMT/Tasks/Task 2.html
+++ b/SSfMT/Tasks/Task 2.html
@@ -19,7 +19,7 @@
 <div id='summary'>Formative Tasks</div>
 </div>
 <div class='subheader'>
-<div id='related'>See also: <a href="./../../SSfMT.html">Software Systems for Music Technology</a>, <a href="./../../SSfMT/Handbook.html#Assessment">Assessment</a></div>
+<div id='related'>See also: <a href="./../../SSfMT.html">Software Systems for Music Technology</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#Formative%20Task%202'>Formative Task 2</a></li>
