ready for lecture on 16 Jan

--- a/SSfMT/Assignment Briefs.html
+++ b/SSfMT/Assignment Briefs.html
@@ -25,6 +25,7 @@
 <ul class='toc'><li class='toc1'><a href='#Assignment%20Briefs'>Assignment Briefs</a></li>
 <ul class='toc'><li class='toc2'><a href='#Formative%20Assessment'>Formative Assessment</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Summative%20Assessment'>Summative Assessment</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Assessment%20Criteria'>Assessment Criteria</a></li>
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Assignment%20Briefs'>Assignment Briefs</a></h2>
 <h3><a class='anchor' name='Formative%20Assessment'>Formative Assessment</a></h3>
 <ol>
@@ -33,9 +34,16 @@
 
 <p><h3><a class='anchor' name='Summative%20Assessment'>Summative Assessment</a></h3>
 <ol>
-<li><em>Software System</em> (50%)
-<p><strong>Deadline</strong>: Monday, 16 April 2017, by 16:00.<li><em>Technical Report</em> (40%)
-<p><strong>Deadline</strong>: Monday, 16 April 2017, by 16:00.<li><em>Presentation/Concert</em> (10%)
+<li><a href="./../SSfMT/Assignments/Software System.html">Software System</a> (50%)
+<p><strong>Deadline</strong>: Monday, 16 April 2017, by 16:00.<li><a href="./../SSfMT/Assignments/Technical Report.html">Technical Report</a> (40%)
+<p><strong>Deadline</strong>: Monday, 16 April 2017, by 16:00.<li><a href="./../SSfMT/Assignments/Presentation.html">Presentation/Concert</a> (10%)
 <p><strong>Deadline</strong>: Thursday, 26 April 2017, event from 13:15-17:15.</ol>
+
+<p><h3><a class='anchor' name='Assessment%20Criteria'>Assessment Criteria</a></h3>
+<ul>
+<li>Understanding of the synthesis/effects and control systems involved<li>Sophistication of synthesis/effects/control system implementation<li>Well presented, clear, commented code<li>Creativity and originality in composition/performance/installation<li>Critical analysis (algorithms, code, sound, interaction, etc.)<li>Appropriate and well thought-out use of interface (graphical and devices)<li>Suitable parameter mapping of controls<li>Evidence of research including suitable citations and bibliography</ul>
+
+<p>In your project you should respond to the following key points that will be evaluated in your <em>Software System</em>, <em>Technical Report</em> and <em>Presenation/Concert</em>:<ul>
+<li>Concept/idea of project<li>Research<li>Programming skills<li>Realisation and creative or research outputs<li>Project management and collaboration<li>Presentation<li>Critical evaluation</ul>
 
 <p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Assignment Briefs.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Assignment Briefs.schelp</a><br>link::SSfMT/Assignment Briefs::<br>sc version: 3.8.0</div></div></body></html>
