--- a/SSfMT/Handbook.html
+++ b/SSfMT/Handbook.html
@@ -79,9 +79,9 @@
 <li><a href="./../SSfMT/Assignments/Seminar Presentation.html">Seminar Presentation</a>.<li><a href="./../SSfMT.html#Formative%20Tasks">Reading and practical tasks</a>.<li>Independent learning.</ol>
 
 <p><li><strong>Summative</strong>:<ol>
-<li>Software system (50%) written in the SuperCollider programming language.<li>Technical report (40%)<li>Presentation/performance using the software system (10%).</ol>
+<li><a href="./../SSfMT/Assignments/Software System.html">Software System</a> (50%) written in the SuperCollider programming language.<li><a href="./../SSfMT/Assignments/Technical Report.html">Technical Report</a> (40%)<li><a href="./../SSfMT/Assignments/Presentation">Presentation/Concert</a> (10%) using the software system.</ol>
 
-<p>You can read all the <strong>Assignment Briefs</strong> <a href="./../SSfMT/Assignment Briefs.html">here</a>.</ul>
+<p>You can read all the <strong>Assignment Briefs and Criteria</strong> <a href="./../SSfMT/Assignment Briefs.html">here</a>.</ul>
 
 <p><h3><a class='anchor' name='Assessment%20Strategy'>Assessment Strategy</a></h3>
 
@@ -94,7 +94,7 @@
 <li><strong>Software (50%)</strong>: Monday, 16 April 2018 before 16:00.<li><strong>Technical Report (40%)</strong>: Monday, 16 April 2018 before 16:00.<li><strong>Presentation / Performance (10%)</strong>: Thursday 26 April 2018, event from 13:15-17:15.</ul>
 <h3><a class='anchor' name='What%20to%20hand%20in'>What to hand in</a></h3>
 
-<p>Hand in two copies of the work to be assessed on or before the due date. CDs must also be submitted in duplicate. Whatever form your assessment takes, you must pay attention to all aspects of presentation, including the material appearance of your work.
+<p>Hand in two copies of the work to be assessed on or before the due date. This will include two printed copies of the technical report and two USB drives with the Software System (code and supporting materials) and a PDF of the technical report. Whatever form your assessment takes, you must pay attention to all aspects of presentation, including the material appearance of your work.
 <p>Each copy of your work must be in a separate cardboard wallet folder. Mark the folders on the front top right-hand corner. One folder must be marked with:<ul>
 <li>your name<li>your Exam Number – Y + 7-digits<li>the title of the module<li>the date</ul>
 
