--- a/SSfMT/Tasks/Task 3.html
+++ b/SSfMT/Tasks/Task 3.html
@@ -25,6 +25,6 @@
 <ul class='toc'><li class='toc1'><a href='#Formative%20Task%203'>Formative Task 3</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='Formative%20Task%203'>Formative Task 3</a></h2>
 <ol>
-<li>Read pp. 3-92 (Ch 2 - 3) from <a href="http://yorsearch.york.ac.uk/44YORK:44YORK_ALMA_DS51242483270001381">Sound Synthesis and Sampling</a> (Russ 2009).<li>Enjoy your Christmas break!! And continue experimenting with modular synthesis and <a href="https://vcvrack.com/">VCV Rack</a>.</ol>
+<li>Read pp. 3-92 (Ch 2 - 3) from <a href="http://yorsearch.york.ac.uk/44YORK:44YORK_ALMA_DS51242483270001381">Sound Synthesis and Sampling</a> (Russ 2009).<li>Continue experimenting with modular synthesis and <a href="https://vcvrack.com/">VCV Rack</a>.</ol>
 
 <p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Tasks/Task 3.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Tasks/Task 3.schelp</a><br>link::SSfMT/Tasks/Task 3::<br>sc version: 3.8.0</div></div></body></html>
