--- a/SSfMT/Lectures/Introduction to Programming.html
+++ b/SSfMT/Lectures/Introduction to Programming.html
@@ -24,6 +24,8 @@
 <div id='toc'>
 <ul class='toc'></ul></div><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.001.png'/><br><b>CSIR Mk 1 (1951) - csiropedia.csiro.au</b></div>
 
+<p><pre class='code prettyprint lang-sc'>"open http://theconversation.com/how-australia-played-the-worlds-first-music-on-a-computer-60381".unixCmd;</pre>
+
 <p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.002.png'/><br><b>CSIRAC with Trevor Pearcey - computerhistory.org</b></div>
 
 <p>Calculate how many years since the first computer produced music. Run the code below by pressing shift+return<pre class='code prettyprint lang-sc'>10.do{((Date.getDate.year - 1951).asString ++ " YEARS OF COMPUTER MUSIC!!!").postln};</pre>
@@ -76,6 +78,12 @@
 <p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.022.png'/><br><b>FORTRAN - blogspot.com</b></div>
 
 <p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.023.png'/><br><b>FORTRAN - blogspot.com</b></div>
+
+<p><div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture3/lecture3.001.png'/><br><b>Assembly Code - wikipedia.org</b></div>
+
+<p><div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture3/lecture3.002.png'/><br><b>Machine Code in monitor - wikipedia.org</b></div>
+
+<p><div class='image'><img src='http://www.federicoreuben.com/SSfMT/Lectures/Lecture3/lecture3.003.png'/><br><b>Compiler and Assembler - what-when-how.com</b></div>
 
 <p><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/seminars/seminar1/seminar1.024.png'/><br><b>C code - googleapis.com</b></div>
 
