--- a/SSfMT/Practicals/Programming Concepts 1.html
+++ b/SSfMT/Practicals/Programming Concepts 1.html
@@ -329,7 +329,9 @@ f[1]
 // is the same as:
 f.at(1)
 
-(10,12..20)
+(1,3..21) //odd numbers
+(0,2..20) //even numbers
+(0..10).nthPrime //prime numbers
 
 (1,3..8) + (1,4..8)</pre>
 
@@ -362,5 +364,5 @@ Array</pre>
 <h3><a class='anchor' name='Exercises'>Exercises</a></h3>
 
 <p>Answer the following questions:<ol>
-<li>What is the difference between local and global variables?<li>What is a function?<li>What is an argument?<li>What is Object Oriented Programming (OOP)?<li>What is an object?<li>What is a message?<li>Name some of the differences between computer and human languages.<li>How are arguments related to messages?<li>What is the semicolon for?<li>What is polymorphism?<li>What kinds of brackets do we use in SC and for what purpose?<li>What is a collection?</ol>
+<li>What is the difference between local and global variables?<li>What is a function?<li>What is an argument?<li>What is Object Oriented Programming (OOP)?<li>What is an object?<li>What is a message?<li>Name some of the differences between computer and human languages.<li>How are arguments related to messages?<li>What is the semicolon for?<li>What kinds of brackets do we use in SC and for what purpose?<li>What is a collection?</ol>
 <div class='note'><span class='notelabel'>NOTE:</span> Various examples, ideas, etc. have been taken or derived from the SC documentation, Paul Berg, David Cottle, Nick Collins, and probably lots of other people in the SuperCollider community.</div><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Practicals/Programming Concepts 1.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Practicals/Programming Concepts 1.schelp</a><br>link::SSfMT/Practicals/Programming Concepts 1::<br>sc version: 3.8.0</div></div></body></html>
