computer music lecture

--- a/SSfMT.html
+++ b/SSfMT.html
@@ -38,7 +38,7 @@
 
 <p><h3><a class='anchor' name='Lectures'>Lectures</a></h3>
 <ul>
-<li><a href="./SSfMT/Lectures/Introduction to Module.html">Introduction to Module</a><li><a href="./SSfMT/Lectures/Electronic Music.html">Electronic Music</a><li><a href="./SSfMT/Lectures/Introduction to Programming.html">Introduction to Programming</a></ul>
+<li><a href="./SSfMT/Lectures/Introduction to Module.html">Introduction to Module</a><li><a href="./SSfMT/Lectures/Electronic Music.html">Electronic Music</a><li><a href="./SSfMT/Lectures/Introduction to Programming.html">Introduction to Programming</a><li><a href="./SSfMT/Lectures/Computer Music.html">Computer Music</a></ul>
 
 <p><h3><a class='anchor' name='Practicals'>Practicals</a></h3>
 <ul>
