--- a/SSfMT/Tasks/Task 5.html
+++ b/SSfMT/Tasks/Task 5.html
@@ -25,6 +25,6 @@
 <ul class='toc'><li class='toc1'><a href='#Formative%20Task%205'>Formative Task 5</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='Formative%20Task%205'>Formative Task 5</a></h2>
 <ol>
-<li>Carefully go through <a href="./../../SSfMT/Practicals/Playing with UGens 1.html">Playing with UGens 1</a> by reading the material and evaluating/studying the code.<li>Go through <a href="./../../Guides/Tour_of_UGens.html">Tour of UGens</a> until <em>Delays and Buffer UGens</em> as indicated in the exercise at the end the previous material.</ol>
+<li>Carefully go through <a href="./../../SSfMT/Practicals/Playing with UGens 1.html">Playing with UGens 1</a> by reading the material and evaluating/studying the code.<li>Go through <code class='code prettyprint lang-sc'>Tour_of_UGens</code> (select and <em>cmd+d</em>) until <em>Delays and Buffer UGens</em> as indicated in the exercise at the end the previous material.</ol>
 
 <p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Tasks/Task 5.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Tasks/Task 5.schelp</a><br>link::SSfMT/Tasks/Task 5::<br>sc version: 3.8.0</div></div></body></html>
